# taxtree-rs

./: Cargo.toml  LICENSE  README.md
crates/taxtree-cli/src/commands/: lineage.rs  mod.rs
crates/taxtree-core/src/: lib.rs  tree.rs
crates/taxtree-core/src/format/: tsv.rs
crates/taxtree-core/tests/: core_workflow.rs
crates/taxtree-core/tests/fixtures/taxonomy/: names.dmp
taxtree-cli/: Cargo.toml
taxtree-cli/src/commands/: index.rs  rank.rs
taxtree-cli/tests/: cli.rs
taxtree-core/: Cargo.toml
taxtree-core/src/: error.rs  index.rs  query.rs
taxtree-core/src/format/: newick.rs
taxtree-core/tests/fixtures/taxonomy/: nodes.dmp
taxtree-rs/: README.md
taxtree-rs/taxtree-cli/src/: main.rs
taxtree-rs/taxtree-cli/src/commands/: tree.rs
taxtree-rs/taxtree-core/src/: dump.rs  types.rs
taxtree-rs/taxtree-core/src/format/: json.rs  mod.rs
